[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "simplepyutils"
dynamic = ["version"]
description = "Simple utilities for Python"
authors = [
    { name = "István Sárándi", email = "istvan.sarandi@uni-tuebingen.de" }
]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"

dependencies = [
    "tqdm",
    "numpy",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux"
]

[project.urls]
Homepage = "https://github.com/isarandi/simplepyutils"
Repository = "https://github.com/isarandi/simplepyutils"
Issues = "https://github.com/isarandi/simplepyutils/issues"
Author = "https://istvansarandi.com"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
write_to = "src/simplepyutils/_version.py"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 99
skip-string-normalization = true